Clean up codebase: remove dead code, unused imports, and optimize performance
Co-authored-by: hajisan <54304457+hajisan@users.noreply.github.com>